# qtphy

./: .gitignore  LICENSE  README.md  detectCamera.sh  detectCamera_old.sh  enable_fpdlink.sh  meson.build  meson_options.txt  qtphy.pro
.github/workflows/: build.yml
resources/: main.qml  qtquickcontrols2.conf  resources.qrc
resources/PhyControls/: PhyDateTime.qml  qmldir
resources/PhyStyle/: Button.qml  Label.qml  ToolBar.qml  ToolButton.qml  qmldir
resources/PhyStyle/demo/: Label.qml
resources/PhyTheme/: PhyTheme.qml
resources/controls/: PhyFileDialog.qml  PhyToolBar.qml
resources/pages/: _camera_demo_image_viewer.qml  about.qml  camera_demo.qml  camera_demo_CaptureSession.qml  device_info.qml  image_viewer.qml  multimedia.qml  multimedia_qmlsink.qml  multitouch.qml  rauc.qml  widget_factory.qml
resources/themes/PhyTheme/: PhyTheme.qml  qmldir
src/: camera_demo copy.cpp_copy  camera_demo.cpp  camera_demo.hpp  camera_demo_cpp_old_snippets_comments.cpp  camera_demo_old.cpp  device_info.cpp  device_info.hpp  main.cpp  multimedia_qmlsink.cpp  multimedia_qmlsink.hpp  rauc.cpp  rauc.hpp
